Fix RTE image alignments [SCI-7964]

--- a/app/assets/stylesheets/steps/components/text.scss
+++ b/app/assets/stylesheets/steps/components/text.scss
@@ -10,6 +10,11 @@
     flex: 0;
   }
 
+  .img-responsive {
+    display: inline;
+    vertical-align: baseline;
+  }
+
   .view-text-element {
     a {
       pointer-events: initial;
